editor with assets

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "../styles/dark-theme.css";
 
 @custom-variant dark (&:is(.dark *));
+
 
 @theme inline {
   --color-background: var(--background);
